tests/compile_errors/014-main-signature.buzz
// Expected `main` signature to be `fun main([str] args) > void|int` got fun main() > void
fun main() > void {}
